Update pyml bundle to pyml master
In particular, this update fixes
https://github.com/coccinelle/coccinelle/issues/189
(compatibility with Python 3.9)

--- a/bundles/pyml/pyml-current/Makefile
+++ b/bundles/pyml/pyml-current/Makefile
@@ -33,6 +33,12 @@ ifneq ($(HAVE_OCAMLFIND),no)
 	OCAMLDEP := $(OCAMLFIND) ocamldep
 	OCAMLDOC := $(OCAMLFIND) ocamldoc
 	STDCOMPAT := $(shell $(OCAMLFIND) query stdcompat)
+        OCAMLCFLAGS := -package stdcompat
+        OCAMLLDFLAGS := -linkpkg
+	OCAMLBYTECODELIBS := -package unix,stdcompat
+	OCAMLBYTECODELIBSNUMPY := -package unix,stdcompat,bigarray
+	OCAMLNATIVELIBS := -package unix,stdcompat
+	OCAMLNATIVELIBSNUMPY := -package unix,stdcompat,bigarray
 else
 	OCAMLC := $(shell \
 		if ocamlc.opt -version >/dev/null 2>&1; then \
@@ -58,6 +64,12 @@ $(error There is no OCaml compiler available in path)
 	OCAMLDEP := ocamldep
 	OCAMLDOC := ocamldoc
 	STDCOMPAT := .
+        OCAMLCFLAGS :=
+        OCAMLLDFLAGS :=
+	OCAMLBYTECODELIBS := unix.cma stdcompat.cma
+	OCAMLBYTECODELIBSNUMPY := unix.cma stdcompat.cma bigarray.cma
+	OCAMLNATIVELIBS := unix.cmxa stdcompat.cmxa
+	OCAMLNATIVELIBSNUMPY := unix.cmxa stdcompat.cmxa bigarray.cmxa
 endif
 
 ifeq ($(wildcard $(STDCOMPAT)/stdcompat.cma),)
@@ -80,6 +92,7 @@ ifeq ($(OCAMLOPTEXE),)
 	CMAX := cma
 	ALLOPT :=
 	TESTSOPT :=
+	OCAMLPREFERREDLIBS := $(OCAMLBYTECODELIBS)
 else
 	OCAMLOPT := $(OCAMLOPTEXE)
 	OCAMLCOPT := $(OCAMLOPT)
@@ -87,6 +100,7 @@ else
 	CMAX := cmxa
 	ALLOPT := all.native
 	TESTSOPT := tests.native
+	OCAMLPREFERREDLIBS := $(OCAMLNATIVELIBS)
 endif
 
 ifeq (4.06.0,$(word 1,$(sort 4.06.0 $(OCAMLVERSION))))
@@ -99,25 +113,24 @@ MODULES := pyml_arch pyutils pytypes pywrappers py pycaml $(PYOPS)
 
 VERSION := $(shell date "+%Y%m%d")
 
-OCAMLCFLAGS := -I $(STDCOMPAT)
-OCAMLLDFLAGS := -I $(STDCOMPAT)
-
 OCAMLLIBFLAGS := -cclib "-L. -lpyml_stubs"
 OCAMLLIBNUMPYFLAGS := -cclib "-L. -lnumpy_stubs"
 
 OCAMLLIBFLAGSNATIVE := $(OCAMLLIBFLAGS)
 OCAMLLIBFLAGSBYTECODE := -custom $(OCAMLLIBFLAGS)
 
-ARCH := $(shell uname)
+UNAME_ARCH := $(shell uname)
 
-ifeq ($(ARCH),Linux)
+ifeq ($(UNAME_ARCH),Linux)
 	PYML_ARCH := pyml_arch_linux.ml
-else ifeq ($(ARCH),Darwin)
+else ifeq ($(UNAME_ARCH),Darwin)
 	PYML_ARCH := pyml_arch_darwin.ml
-else ifeq ($(findstring CYGWIN,$(ARCH)),CYGWIN)
+else ifeq ($(findstring CYGWIN,$(UNAME_ARCH)),CYGWIN)
 	PYML_ARCH := pyml_arch_cygwin.ml
+else ifeq ($(UNAME_ARCH),FreeBSD)
+	PYML_ARCH := pyml_arch_freebsd.ml
 else
-	$(error Unsupported OS $(ARCH)
+	$(error Unsupported OS $(UNAME_ARCH))
 endif
 
 INSTALL_FILES := \
@@ -246,7 +259,7 @@ endif
 pyutils.cmo pyutils.cmx : pyutils.cmi
 
 generate : pyutils.$(CMOX) generate.$(CMOX)
-	$(OCAMLCOPT) $(OCAMLLDFLAGS) stdcompat.$(CMAX) unix.$(CMAX) $^ -o $@
+	$(OCAMLCOPT) $(OCAMLLDFLAGS) $(OCAMLPREFERREDLIBS) $^ -o $@
 
 generate.cmo : generate.ml
 
@@ -261,22 +274,22 @@ pywrappers.mli : pywrappers.ml pytypes.cmi pyml_arch.cmi
 	$(OCAMLC) -i $< >$@
 
 pyml_tests.native : py.cmi pyml.cmxa pyml_tests_common.cmx pyml_tests.cmx
-	$(OCAMLOPT) $(OCAMLLDFLAGS) unix.cmxa stdcompat.cmxa pyml.cmxa \
+	$(OCAMLOPT) $(OCAMLLDFLAGS) $(OCAMLNATIVELIBS) pyml.cmxa \
 		pyml_tests_common.cmx pyml_tests.cmx -o $@
 
 pyml_tests.bytecode : py.cmi pyml.cma pyml_tests_common.cmo pyml_tests.cmo
-	$(OCAMLC) $(OCAMLLDFLAGS) unix.cma stdcompat.cma pyml.cma \
+	$(OCAMLC) $(OCAMLLDFLAGS) $(OCAMLBYTECODELIBS) pyml.cma \
 		pyml_tests_common.cmo pyml_tests.cmo -o $@
 
 numpy_tests.native : py.cmi pyml.cmxa numpy.cmxa \
 		pyml_tests_common.cmx numpy_tests.cmx
-	$(OCAMLOPT) $(OCAMLLDFLAGS) \
-		unix.cmxa stdcompat.cmxa pyml.cmxa bigarray.cmxa numpy.cmxa \
+	$(OCAMLOPT) $(OCAMLLDFLAGS) $(OCAMLNATIVELIBSNUMPY) \
+		pyml.cmxa numpy.cmxa \
 		pyml_tests_common.cmx numpy_tests.cmx -o $@
 
 numpy_tests.bytecode : py.cmi pyml.cma numpy.cma \
 		pyml_tests_common.cmo numpy_tests.cmo
-	$(OCAMLC) $(OCAMLLDFLAGS) unix.cma stdcompat.cma pyml.cma bigarray.cma \
+	$(OCAMLC) $(OCAMLLDFLAGS) $(OCAMLBYTECODELIBSNUMPY) pyml.cma \
 		numpy.cma pyml_tests_common.cmo numpy_tests.cmo -o $@
 
 pyml_arch.ml : $(PYML_ARCH)
@@ -294,12 +307,12 @@ pyml_arch.cmo pyml_arch.cmx : pyml_arch.cmi
 	$(OCAMLOPT) $(OCAMLCFLAGS) -c $< -o $@
 
 %.o : %.c
-	$(OCAMLC) -c $< -o $@
+	$(OCAMLC) -package stdcompat -c $< -o $@
 
 pyml_stubs.o : pyml_wrappers.inc
 
 pyml.cma : $(MODULES:=.cmo) libpyml_stubs.a
-	$(OCAMLC) $(OCAMLLIBFLAGSBYTECODE) -a $(MODULES:=.cmo) -o $@
+	$(OCAMLC) $(OCAMLLIBFLAGSBYTECODE) -a -dllib -lpyml_stubs $(MODULES:=.cmo) -o $@
 
 pyml.cmxa : $(MODULES:=.cmx) libpyml_stubs.a
 	$(OCAMLOPT) $(OCAMLLIBFLAGSNATIVE) -a $(MODULES:=.cmx) -o $@
@@ -311,7 +324,7 @@ lib%.a : %.o
 	$(OCAMLMKLIB) -o $(basename $<) $<
 
 numpy.cma : numpy.cmo libnumpy_stubs.a
-	$(OCAMLC) -custom $(OCAMLLIBNUMPYFLAGS) -a numpy.cmo -o $@
+	$(OCAMLC) $(OCAMLLIBNUMPYFLAGS) -a -dllib -lnumpy_stubs numpy.cmo -o $@
 
 numpy.cmxa : numpy.cmx libnumpy_stubs.a
 	$(OCAMLOPT) $(OCAMLLIBNUMPYFLAGS) -a numpy.cmx -o $@
@@ -330,8 +343,7 @@ pymltop_libdir.ml :
 	fi >$@
 
 pymltop : pyml.cma numpy.cma pymltop_libdir.cmo pytop.cmo
-	$(OCAMLMKTOP) $(OCAMLLDFLAGS) unix.cma stdcompat.cma bigarray.cma $^ \
-		-o $@
+	$(OCAMLMKTOP) $(OCAMLLDFLAGS) $(OCAMLLIBNUMPYFLAGS) $(OCAMLBYTECODELIBSNUMPY) $^ -o $@
 
 pyutop.cmo : pyutop.ml
 ifeq ($(HAVE_OCAMLFIND),no)
